Closed Bug 11484 Opened 25 years ago Closed 25 years ago

apprunner crashes when trying to load any xul file

Categories

(Core :: XUL, defect, P1)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: gayatrib, Assigned: waterson)

References

Details

(Whiteboard: all done)

apprunner when started with apprunner resource:/<xul file path and name>
brings up a blank window (about: blank), instead of the xul file.
Then, if you try putting the location of the xul file in the location
bar, it crashes. Marking the bug as a blocker, as it does not allow
us to test any xul files.

Here is the stack trace:


NTDLL! 77f76148()
nsDebug::Assertion(const char * 0x01496c08, const char * 0x01496b24, const char
* 0x01496af4, int 74) line 176 + 13 bytes
mork_assertion_signal(const char * 0x01496c08) line 74 + 31 bytes
morkEnv::NewError(const char * 0x01496c70) line 362 + 19 bytes
morkEnv::NilPointerError() line 403
morkStore::StageYarnAsBookAtom(morkEnv * 0x00adc3f0, const mdbYarn * 0x0012ed60,
morkAtomSpace * 0x00adc150) line 422
morkStore::YarnToAtom(morkEnv * 0x00adc3f0, const mdbYarn * 0x0012ed60) line 710
+ 20 bytes
morkRow::AddColumn(morkEnv * 0x00adc3f0, unsigned long 133, const mdbYarn *
0x0012ed60, morkStore * 0x00d59898) line 808 + 16 bytes
orkinRow::AddColumn(nsIMdbEnv * 0x00ae8668, unsigned long 133, const mdbYarn *
0x0012ed60) line 461
nsGlobalHistory::SetPageTitle(nsGlobalHistory * const 0x00ae3fc0, const char *
0x09b0e580, const unsigned short * 0x00000000) line 761 + 49 bytes
XPTC_InvokeByIndex(nsISupports * 0x00ae3fc0, unsigned int 4, unsigned int 2,
nsXPTCVariant * 0x0012eeac) line 135
nsXPCWrappedNativeClass::CallWrappedMethod(JSContext * 0x09b969a0,
nsXPCWrappedNative * 0x0a320900, const XPCNativeMemberDescriptor * 0x0a320988,
nsXPCWrappedNativeClass::CallMode CALL_METHOD, unsigned int 2, long *
0x00d91d34, long * 0x0012f0b4) line 511 + 44 bytes
WrappedNative_CallMethod(JSContext * 0x09b969a0, JSObject * 0x00dd0088, unsigned
int 2, long * 0x00d91d34, long * 0x0012f0b4) line 130
js_Invoke(JSContext * 0x09b969a0, unsigned int 2, unsigned int 0) line 654 + 26
bytes
js_Interpret(JSContext * 0x09b969a0, long * 0x0012f8e0) line 2228 + 15 bytes
js_Invoke(JSContext * 0x09b969a0, unsigned int 1, unsigned int 2) line 670 + 13
bytes
js_InternalCall(JSContext * 0x09b969a0, JSObject * 0x00d52068, long 14082528,
unsigned int 1, long * 0x0012f9bc, long * 0x0012f9c4) line 747 + 15 bytes
JS_CallFunction(JSContext * 0x09b969a0, JSObject * 0x00d52068, JSFunction *
0x09b96630, unsigned int 1, long * 0x0012f9bc, long * 0x0012f9c4) line 2611 + 32
bytes
nsJSDOMEventListener::HandleEvent(nsIDOMEvent * 0x0a357e30) line 79 + 37 bytes
nsEventListenerManager::HandleEvent(nsIPresContext & {...}, nsEvent *
0x0012fcd8, nsIDOMEvent * * 0x0012fbd4, unsigned int 4, nsEventStatus &
nsEventStatus_eIgnore) line 971 + 21 bytes
GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x09b96b64,
nsIPresContext & {...}, nsEvent * 0x0012fcd8, nsIDOMEvent * * 0x0012fbd4,
unsigned int 4, nsEventStatus & nsEventStatus_eIgnore) line 2807
XULDocumentImpl::HandleDOMEvent(XULDocumentImpl * const 0x09b916d0,
nsIPresContext & {...}, nsEvent * 0x0012fcd8, nsIDOMEvent * * 0x0012fbd4,
unsigned int 4, nsEventStatus & nsEventStatus_eIgnore) line 2340
GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x0a0ab844,
nsIPresContext & {...}, nsEvent * 0x0012fcd8, nsIDOMEvent * * 0x0012fbd4,
unsigned int 4, nsEventStatus & nsEventStatus_eIgnore) line 2801
XULDocumentImpl::HandleDOMEvent(XULDocumentImpl * const 0x0a0bf1e0,
nsIPresContext & {...}, nsEvent * 0x0012fcd8, nsIDOMEvent * * 0x0012fbd4,
unsigned int 4, nsEventStatus & nsEventStatus_eIgnore) line 2340
GlobalWindowImpl::HandleDOMEvent(GlobalWindowImpl * const 0x0a180a84,
nsIPresContext & {...}, nsEvent * 0x0012fcd8, nsIDOMEvent * * 0x0012fbd4,
unsigned int 1, nsEventStatus & nsEventStatus_eIgnore) line 2801
nsWebShell::OnEndDocumentLoad(nsWebShell * const 0x0a17c5e4, nsIDocumentLoader *
0x0a17b160, nsIChannel * 0x09b0ef80, unsigned int 0, nsIDocumentLoaderObserver *
0x0a17c5e4) line 3286 + 34 bytes
nsDocLoaderImpl::FireOnEndDocumentLoad(nsIDocumentLoader * 0x0a17b160, unsigned
int 0) line 1124
nsDocLoaderImpl::OnStopRequest(nsDocLoaderImpl * const 0x0a17b164, nsIChannel *
0x0a357840, nsISupports * 0x00000000, unsigned int 0, const unsigned short *
0x00000000) line 1031
nsOnStopRequestEvent::HandleEvent(nsOnStopRequestEvent * const 0x0a357dd0) line
274
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x0a357dd4) line 149 + 12 bytes
PL_HandleEvent(PLEvent * 0x0a357dd4) line 509 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x00b1ee00) line 470 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x00dd030c, unsigned int 49394, unsigned int 0,
long 11660800) line 932 + 9 bytes
USER32! 77e713ed()
00b1ee00()
Assignee: don → waterson
Blocks: 11411
Target Milestone: M10
Looks like a history bug.
Priority: P3 → P1
QA says they are blocked on this.
Status: NEW → ASSIGNED
Target Milestone: M10 → M9
Move to M9.
Whiteboard: fix in hand
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Blocks: 11349
No longer blocks: 11349
Component: Browser-General → XUL
QA Contact: leger → ckritzer
ckritzer...this shows marked fixed yesterday.  Please Verify with today's build.
Blocks: 11349
Status: RESOLVED → VERIFIED
Whiteboard: fix in hand → all done
Fixed on WinNT:             1999081609
Verified on MacOS8.6:    1999081608
Verified on Linux6:           1999081608

Use the testcase @ http://wetnap/ckritzer/bugzilla/bugzilla10389t1.xul
BULK MOVE: Changing component from XUL to XP Toolkit/Widgets: XUL.  XUL 
component will be deleted.
Component: XUL → XP Toolkit/Widgets: XUL
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: ckritzer → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.