Bug 11484. Be defensive if a null pointer is passed as the doc title in SetPageTitle().